--- a/resources/image_lambda/Cargo.toml
+++ b/resources/image_lambda/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_world_lambda"
+name = "image_lambda"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,4 +20,3 @@ lambda_runtime = "0.7"
 tokio = { version = "1", features = ["macros"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
-
