--- a/resources/image_lambda/Cargo.toml
+++ b/resources/image_lambda/Cargo.toml
@@ -18,6 +18,7 @@ edition = "2021"
 aws-config = "0.55.0"
 aws-sdk-s3 = "0.25.1"
 axum = "0.6.12"
+image = "0.24.6"
 lambda_http = { version = "0.7" }
 lambda_runtime = { version = "0.7" }
 serde = { version = "1.0.159", features = ["derive"] }
