--- a/resources/image_lambda/Cargo.toml
+++ b/resources/image_lambda/Cargo.toml
@@ -15,12 +15,14 @@ edition = "2021"
 # and it will keep the alphabetic ordering for you.
 
 [dependencies]
+accept-header = "0.2.3"
 aws-config = "0.55.0"
 aws-sdk-s3 = "0.25.1"
 axum = "0.6.12"
 image = "0.24.6"
 lambda_http = { version = "0.7" }
 lambda_runtime = { version = "0.7" }
+mime = "0.3.17"
 serde = { version = "1.0.159", features = ["derive"] }
 tokio = { version = "1", features = ["macros"] }
 tracing = { version = "0.1", features = ["log"] }
