--- a/resources/image_lambda/Cargo.toml
+++ b/resources/image_lambda/Cargo.toml
@@ -14,16 +14,23 @@ edition = "2021"
 # add the latest version of a dependency to the list,
 # and it will keep the alphabetic ordering for you.
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+incremental = true
+
 [dependencies]
 accept-header = "0.2.3"
-aws-config = "0.55.0"
-aws-sdk-s3 = "0.25.1"
+aws-config = "0.55.1"
+aws-sdk-s3 = "0.26.0"
+axum = "0.6.16"
 image = "0.24.6"
-lambda_http = { version = "0.7" }
-lambda_runtime = { version = "0.7" }
+lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
+lambda_runtime = "0.8.0"
 mime = "0.3.17"
-serde = { version = "1.0.159", features = ["derive"] }
-serde_json = "1.0.96"
+serde = { version = "1.0.160", features = ["derive"] }
 tokio = { version = "1", features = ["macros"] }
 tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
+
